# wasmerang

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  clippy.toml  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
envoy/: envoy.yaml
examples/envoy-docker/: README.md  docker-compose.yaml
examples/envoy-docker/envoy/: envoy.yaml
examples/istio-k8s/: Dockerfile.client  Dockerfile.egress-router  README.md
examples/istio-k8s/egress-router/: main.go
examples/istio-k8s/go-client/: main.go
examples/istio-k8s/go-server/: main.go
examples/istio-k8s/k8s/: 01-wasm-tcp-filter.yaml  02-http-to-tcp-override.yaml  README.md  client-deployment.yaml  egress-router1-deployment.yaml  egress-router2-deployment.yaml  egress1-deployment.yaml  egress2-deployment.yaml  envoyfilter.yaml  network-policies.yaml
istio-demo/: Dockerfile.server
istio-demo/go-client/: main.go
istio-demo/go-server/: main.go
istio-demo/k8s/: README.md  client-deployment.yaml  egress1-deployment.yaml  egress2-deployment.yaml  envoyfilter.yaml  serviceentry.yaml
scripts/: check-readme-links.py
src/: lib.rs  stream_context.rs  wasm_filter.rs
src/core/: config.rs  mod.rs  router.rs  utils.rs
