[package]
name = "wasmerang"
version = "0.1.0"
authors = ["Chrtistof Gerber <christof.gerber1@gmail.com>"]
edition = "2021"

[lib]
name = "wasmstreamcontext"
crate-type = ["cdylib"]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.2.0"
log = "0.4"
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.12"

# Default to WASM target since this is a WASM-only project
[target.wasm32-unknown-unknown]
